k8s/question-answer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-answer
spec:
  selector:
    app: question-answer
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: ClusterIP
