k8s/question-answer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: question-answer-ingress
spec:
  rules:
    - host: question-answer.49.50.131.82
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: question-answer
                port:
                  number: 8086
